# email-triage-env

./: .gitignore  COMPETITION_COMPLIANCE.md  COMPETITION_REQUIREMENTS.md  Dockerfile  GRADERS.md  HUGGINGFACE_DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md  TESTING_GUIDE.md  app.py  baseline.py  deploy_to_hf.sh  openenv.yaml  pyproject.toml  quick_test.py  requirements.txt
data/: email_templates.json
env/: __init__.py  email_generator.py  environment.py  graders.py  models.py  reward.py  tasks.py
server/: __init__.py  app.py
tests/: test_environment.py  test_graders.py
